# BigNumLib

./: .gitignore  CMakeLists.txt  README.md
BigNumLib/: CMakeLists.txt  bignum.c  bignum.h
tests/: maintest.c
